src/test/ui/closures/2229_closure_analysis/simple-struct-min-capture.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/simple-struct-min-capture.rs:25:17
   |
LL |     let mut c = #[rustc_capture_analysis]
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

warning: the feature `capture_disjoint_fields` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/simple-struct-min-capture.rs:3:12
   |
LL | #![feature(capture_disjoint_fields)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #53488 <https://github.com/rust-lang/rust/issues/53488> for more information

error: Capturing p[(0, 0)] -> MutBorrow
  --> $DIR/simple-struct-min-capture.rs:28:9
   |
LL |         p.x += 10;
   |         ^^^

error: Capturing p[] -> ImmBorrow
  --> $DIR/simple-struct-min-capture.rs:31:26
   |
LL |         println!("{:?}", p);
   |                          ^

error: Min Capture p[] -> MutBorrow
  --> $DIR/simple-struct-min-capture.rs:28:9
   |
LL |         p.x += 10;
   |         ^^^

error: aborting due to 4 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0658`.
